# agents-company

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
agents/: README.md
backend-core/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend-core/alembic/: env.py
backend-core/app/: main.py
backend-core/app/api/: tasks.py
backend-core/app/core/: config.py  database.py
backend-core/app/schemas/: task.py
backend-core/app/services/: graph.py  llm.py
backend-core/scripts/: chat.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
memo/: git-push手順.md  バックエンド確認方法.md  初期設定.md  変更履歴.md
skills/: README.md
