[project]
name = "backend-core"
version = "0.1.0"
description = "AI Company Game - FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "alembic>=1.18.5",
    "langgraph>=1.2.9",
    "openai>=2.47.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
